SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Case_Support__c/fields/Case_Example__c.field-meta.xml
<CustomField>
    <fullName>Case_Example__c</fullName>
    <label>Case Example</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund Issue</fullName>
            </value>
            <value>
                <fullName>Lost Baggage</fullName>
            </value>
            <value>
                <fullName>Flight Delay Complaint</fullName>
            </value>
            <value>
                <fullName>Ticket Issue</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>