SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Case_Support__c/fields/Internal_comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_comments__c</fullName>
    <label>Internal comments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>