SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Case_Support__c/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <label>Other Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>