SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Case_Support__c/fields/Passenger_Details__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Details__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Passenger Details</label>
    <referenceTo>Passenger_Details__c</referenceTo>
    <relationshipLabel>Case Support</relationshipLabel>
    <relationshipName>Case_Support</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>