SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Case_Support__c/fields/Web_Email__c.field-meta.xml
<CustomField>
    <fullName>Web_Email__c</fullName>
    <defaultValue>&quot;no@email.com&quot;</defaultValue>
    <label>Web Email</label>
    <length>20</length>
    <type>Text</type>
</CustomField>