SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Case_Support__c/fields/Web_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Web_Mobile_Number__c</fullName>
    <label>Web Mobile Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>