SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Case_Support__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Passenger_Details__c</columns>
    <columns>Case_Product__c</columns>
    <columns>Case_Example__c</columns>
    <columns>Case_Origin__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>